name:          pipes-conduit
version:       0.0.2.1
license:       BSD3
license-file:  LICENSE
copyright:     Copyright (c) Paolo Capriotti 2010-2012,
                             Renzo Carbonara 2013
author:        Paolo Capriotti, Renzo Carbonara
maintainer:    renzocarbonaraλgmail.com
stability:     Experimental
tested-with:   GHC ==7.4.1
homepage:      https://github.com/k0001/pipes-extra
bug-reports:   https://github.com/k0001/pipes-extra/issues
category:      Pipes, Conduit
build-type:    Simple
cabal-version: >=1.8
synopsis:      Compatibility layer between pipes and conduit streams.
description:
  Compatibility layer between pipes and conduit streams.
  .
  The "Control.Proxy.Conduit" module exports utilities to convert
  conduit streams to pipes streams.
  .
  The "Data.Conduit.Proxy" module exports utilities to convert pipes
  streams to conduit streams.
extra-source-files: README.md PEOPLE

source-repository head
    Type: git
    Location: git://github.com/k0001/pipes-conduit.git

library
  hs-source-dirs:     src
  exposed-modules:    Control.Proxy.Conduit
                      Data.Conduit.Proxy
  build-depends:
      base            (>=4.0 && <5.0)
    , transformers    (>=0.2 && <0.4)
    , pipes           (>=3.2 && <3.3)
    , conduit         (>=1.0 && <1.1)
